iptables.rules
# Generated by iptables-save v1.6.0 on Wed Dec  5 16:46:00 2018
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [17:1592]
-A INPUT -p udp -m udp --dport 8074 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8074 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8072 -j ACCEPT
-A INPUT -p udp -m udp --dport 8072 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5901 -j ACCEPT
-A INPUT -p udp -m udp --dport 5901 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 8073 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8073 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Wed Dec  5 16:46:00 2018
